Fix overflow-scroll

--- a/app/static/features/9-11/styles/_article.sass
+++ b/app/static/features/9-11/styles/_article.sass
@@ -91,8 +91,14 @@ article
       background: $blue-light
 
 @media (max-width: $screen-tablet)
+  html,
+  body,
+  body.embed-false
+    overscroll-behavior: none
+  
   article
     padding: 8rem 1rem
+    background: white
     
   #submenu
     top: 4rem
