--- a/app/static/features/9-11/styles/_menu.sass
+++ b/app/static/features/9-11/styles/_menu.sass
@@ -247,6 +247,7 @@ aside
     flex-direction: column
     padding: 6rem 1rem 2rem
     overflow: auto
+    overscroll-behavior: none
     
     aside &.hidden
       height: 4rem
